--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,13 @@
 language:
   - python
 python:
+  - 2.6
   - 2.7
+  - 3.3
   - 3.4
+  - 3.5
   - pypy
+  - pypy3
 notifications:
   - email: fabiomadeira@me.com
 install:
