Some minor fixes to put coverage to work.

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,8 +16,7 @@ install:
   - "pip install -r requirements.txt"
   - "pip install coveralls"
 script:
-  - if [[ $TRAVIS_PYTHON_VERSION == '2.7' ]]; then python -m unittest discover; fi
-  - if [[ $TRAVIS_PYTHON_VERSION == '3.4' ]]; then python -m unittest discover; fi
+  - python -m unittest discover
   - coverage run --source=pdbe setup.py test
 after_success:
   - coveralls
