--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
-recursive-include docs *.md
-include README.md
+include README.rst
 include LICENSE.md
+include tests/
 #include CHANGELOG.rst
-include tests
+#recursive-include docs *.md
